--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /*---------------------------
- CSS Index  
+ CSS Index
 ****************************
 
 01. Variables
@@ -48,7 +48,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap");
 :root {
   --color-primary: #1FDE7F;  // main clolor
-  --color-secondary: #28C678; 
+  --color-secondary: #28C678;
   --color-tertiary: #0d1013;
   --color-gray: #f6f6f6;
   --color-subtitle: #1DE1E7;  //akashi subtitle
@@ -136,11 +136,11 @@
     background:#fd4520;
     border-radius: 10px;
   }
-  
+
   ::-webkit-scrollbar-thumb:hover {
     background:rgba(255, 51, 51, 0.925)
   }
-  
+
 
 
 
@@ -411,7 +411,7 @@ var {
   font-family: 'Poppins', sans-serif; }
 
 /*---------------------------
-	List Style 
+	List Style
 ---------------------------*/
 ul,
 ol {
@@ -472,7 +472,7 @@ ol {
     padding-left: 30px; }
 
 /*=========================
-    Section Separation 
+    Section Separation
 ==========================*/
 .slick-dotted.slick-slider {
   margin-bottom: 0; }
@@ -4374,7 +4374,7 @@ input[type="submit"] {
 /*==============================
  *  Utilities
 =================================*/
-/* 
+/*
 font-family: 'Red Hat Display', sans-serif;
 */
 .clearfix:before,
@@ -4392,7 +4392,7 @@ font-family: 'Red Hat Display', sans-serif;
   margin-bottom: -10px; }
 
 /*===============================
-    Background Color 
+    Background Color
 =================================*/
 .bg-color-primary {
   background: var(--color-primary); }
@@ -4416,7 +4416,7 @@ font-family: 'Red Hat Display', sans-serif;
   background: var(--color-extra03); }
 
 /*===========================
-Background Image 
+Background Image
 =============================*/
 .bg_image {
   background-repeat: no-repeat;
@@ -4860,7 +4860,7 @@ textarea:-ms-input-placeholder {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; }
 
 /*=============================
-	Overlay styles 
+	Overlay styles
 ==============================*/
 [data-overlay],
 [data-black-overlay],
@@ -4948,7 +4948,7 @@ textarea:-ms-input-placeholder {
   opacity: 1; }
 
 /*------------------------------
-    Scroll Up 
+    Scroll Up
 --------------------------------*/
 #scrollUp {
   width: 70px;
@@ -5028,7 +5028,7 @@ textarea:-ms-input-placeholder {
     color: var(--color-primary); }
 
 /*--------------------
-    Contact Form 
+    Contact Form
 ----------------------*/
 .form-message {
   margin-bottom: 0;
@@ -5041,7 +5041,7 @@ textarea:-ms-input-placeholder {
     color: #0d8d2d; }
 
 /*---------------------------
-    Banner Area Styles 
+    Banner Area Styles
 -----------------------------*/
 .template-color-2 {
   background: #1D1E24; }
@@ -7847,9 +7847,9 @@ Copyright (c) 2015 Daniel Eden
 .no-js .cd-words-wrapper b.is-visible {
   opacity: 1; }
 
-/* -------------------------------- 
+/* --------------------------------
 
-xclip 
+xclip
 
 -------------------------------- */
 .cd-headline.clip span {
@@ -7878,7 +7878,7 @@ xclip
 
 /* Header  */
 /*---------------------------
-    Header Area Styles 
+    Header Area Styles
 -----------------------------*/
 body.template-color-1 {
   background-color: #212428; }
@@ -8112,7 +8112,7 @@ body.template-color-1 {
 .logo a {
   display: inline-block; }
   .logo a img {
-    transition: 0.3s; 
+    transition: 0.3s;
     width: 50px;
 }
     @media only screen and (max-width: 767px) {
@@ -8220,7 +8220,7 @@ body.template-color-1 {
     color: var(--color-primary); }
 
 /*--------------------------
-    Navigation Styles  
+    Navigation Styles
 ----------------------------*/
 .mainmenu-nav .primary-menu {
   display: flex;
@@ -8270,7 +8270,7 @@ body.template-color-1 {
   opacity: 0.5; }
 
 /*----------------------------
-    Mobile Menu Styles  
+    Mobile Menu Styles
 ------------------------------*/
 .popup-mobile-menu {
   z-index: 9999;
@@ -8394,7 +8394,7 @@ body.template-color-1 {
   box-shadow: none; }
 
 /*----------------------
-    Right Demo  
+    Right Demo
 -----------------------*/
 .rn-right-demo {
   width: 40px;
@@ -8639,7 +8639,7 @@ body.template-color-1 {
     z-index: -1; }
 
 /*-------------------
- Popup Tab  
+ Popup Tab
 -----------------------*/
 .popuptab-area {
   justify-content: center;
@@ -8685,7 +8685,7 @@ body.template-color-1 {
           opacity: 1; }
 
 /*---------------------------------
-    Right Demo Light Version  
+    Right Demo Light Version
 ----------------------------------*/
 .demo-modal-area.white-version .wrapper .rn-modal-inner {
   background: var(--gradient-box-w);
@@ -8731,7 +8731,7 @@ body.template-color-1 {
 
 /* Elements  */
 /*---------------------------
-    Header Area Styles 
+    Header Area Styles
 -----------------------------*/
 a.rn-btn,
 button.rn-btn {
@@ -9124,7 +9124,7 @@ figcaption {
       font-size: 34px; } }
 
 /*---------------------------
-    Banner Area Styles 
+    Banner Area Styles
 -----------------------------*/
 .skill-share-inner-one .skill-share {
   flex-wrap: wrap;
@@ -10082,7 +10082,7 @@ figcaption {
       color: var(--color-body); }
 
 /*---------------------------
-    Service Area Styles 
+    Service Area Styles
 -----------------------------*/
 .rn-service {
   text-align: left;
@@ -10444,7 +10444,7 @@ div#featured-project-carousel {
   color: var(--color-lightn); }
 
 /*=====================
-    Skill Area 
+    Skill Area
 ========================*/
 @media only screen and (max-width: 479px) {
   .section-title.text-center span.subtitle {
@@ -10815,7 +10815,7 @@ div#featured-project-carousel {
       margin-top: 20px; } }
 
 /*=========================
-    Progress Bar Styles 
+    Progress Bar Styles
 ==========================*/
 .progress-charts {
   overflow: hidden; }
@@ -10843,7 +10843,7 @@ div#featured-project-carousel {
     border-radius: 10px;
     padding: 3px;
     background: #212428;
-    box-shadow: inset 8px 8px 16px #00000075, 
+    box-shadow: inset 8px 8px 16px #00000075,
  inset -8px -8px 16px #383e4575; }
     .progress-charts .progress .progress-bar {
       overflow: visible;
@@ -10863,7 +10863,7 @@ div#featured-project-carousel {
         opacity: 0.9; }
 
 /*---------------------------
-    Testimonial Area Styles 
+    Testimonial Area Styles
 -----------------------------*/
 .rn-testimonial {
   padding: 30px 15px; }
@@ -11283,7 +11283,7 @@ div#featured-project-carousel {
       text-align: center !important; } }
 
 /*------------------------------
-    Client Single Card 
+    Client Single Card
 --------------------------------*/
 .client-card {
   display: flex;
@@ -11504,7 +11504,7 @@ div#featured-project-carousel {
   padding: 0; }
 
 /*---------------------------
-    Pricing Area Styles 
+    Pricing Area Styles
 -----------------------------*/
 .navigation-wrapper {
   margin-left: 10px;
@@ -11926,7 +11926,7 @@ div#featured-project-carousel {
       margin-top: 30px; } }
 
 /*---------------------------
-    Contact Area Styles 
+    Contact Area Styles
 -----------------------------*/
 .contact-about-area {
   padding: 30px;
@@ -12615,7 +12615,7 @@ div#featured-project-carousel {
       transition: var(--transition); }
 
 /*---------------------------
-    Contact Area Styles 
+    Contact Area Styles
 -----------------------------*/
 .footer-area h4 span {
   padding: 20px 23px;
@@ -12653,7 +12653,7 @@ div#featured-project-carousel {
   max-height: 100px; }
 
 /*-----------------------
-    Footer Style Two  
+    Footer Style Two
 --------------------------*/
 .footer-style-2 .copyright .description {
   color: var(--color-body);
@@ -12789,7 +12789,7 @@ div#featured-project-carousel {
             height: 12px; }
 
 /*---------------------------
-    Portfolio Area Styles 
+    Portfolio Area Styles
 -----------------------------*/
 .rn-portfolio,
 .rn-blog {
@@ -12991,7 +12991,7 @@ div#featured-project-carousel {
     padding: 35px 15px; }
 
 /*-----------------------------
-    Portfolio Style Two  
+    Portfolio Style Two
 -------------------------------*/
 .portfolio-style-two .carousel.slide {
   box-shadow: var(--shadow-1);
@@ -13275,7 +13275,7 @@ div#featured-project-carousel {
   margin-top: -25px; }
 
 /*----------------------
-Rn Slick Dots Style  
+Rn Slick Dots Style
 -----------------------*/
 .slick-initialized .slick-slide {
   margin-bottom: 0 !important; }
@@ -14644,3 +14644,4 @@ body.white-version {
   color: var(--color-white) !important; }
 
 
+x
